# now-playing

./: Cargo.toml  README.md
src/: config.rs  main.rs  metadata.rs  ui.rs
