[package]
name = "now-playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.0"
image = "0.24.5"

druid = { version = "0.8.2", features = ["image", "png", "jpeg", "svg"]}
attohttpc = "0.24.0"    
directories = "4.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
